5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1716_2496.log
== SUBMITION (2019-05-16 14:59:20) 
-- CODE:
num = int(imput("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	num = int(input("Digite outro numero: "))
print(soma)
-- EXECUTION TIME:
0.137395
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 1, in <module>
    num = int(imput("Digite um numero: "))
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:59:50) 
-- CODE:
num = int(imput("Digite um numero: "))
soma = 0
while ( num != -1):
	soma = soma + num
	num = int(input("Digite outro numero: "))
print(soma)
-- EXECUTION TIME:
0.138892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 1, in <module>
    num = int(imput("Digite um numero: "))
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:00:20) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while ( num != -1):
	soma = soma + num
	num = int(input("Digite outro numero: "))
print(soma)
-- EXECUTION TIME:
0.188743
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
